# glowstick

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/burn-llama/: Cargo.toml  README.md
examples/burn-llama/src/: cache.rs  lib.rs  llama.rs  pretrained.rs  sampling.rs  shape.rs  transformer.rs
examples/burn-whisper/: Cargo.toml  README.md
examples/burn-whisper/src/: audio.rs  beam.rs  helper.rs  lib.rs  pcm_decode.rs  shape.rs  tensor.rs  token.rs  transcribe.rs
examples/burn-whisper/src/model/: load.rs  mod.rs  timestamps.rs
examples/burn-whisper/src/model/cache/: kv.rs  mod.rs  tensor.rs
examples/candle-llama/: Cargo.toml  README.md
examples/candle-llama/src/: llama.rs  main.rs  shape.rs
examples/candle-qwen/: Cargo.toml  README.md
examples/candle-qwen/src/: main.rs  qwen2.rs  qwen3.rs  shape.rs  tensor.rs
examples/specialization/: Cargo.toml  README.md
examples/specialization/src/: lib.rs  tensor.rs
examples/specialization/src/inversions/: gauss_jordan.rs  mod.rs  two_by_two.rs
glowstick-burn/: Cargo.toml
glowstick-burn/src/: lib.rs  tensor.rs
glowstick-burn/src/op/: argmax.rs  argmin.rs  cat.rs  expand.rs  flatten.rs  gather.rs  log_softmax.rs  matmul.rs  mean_dim.rs  mod.rs  narrow.rs  reshape.rs  softmax.rs  sort_descending_with_indices.rs  squeeze.rs  transpose.rs  tril_mask.rs  unsqueeze.rs  var_mean.rs
glowstick-candle/: Cargo.toml
glowstick-candle/src/: lib.rs  tensor.rs
glowstick-candle/src/op/: argmax_dim.rs  argmin_dim.rs  broadcast_add.rs  cat.rs  conv.rs  expand.rs  flatten.rs  gather.rs  log_softmax.rs  matmul.rs  max_dim.rs  mean_dim.rs  min_dim.rs  mod.rs  narrow.rs  narrow_dyn.rs  narrow_dyn_start.rs  reshape.rs  softmax.rs  squeeze.rs  sum_dim.rs  transpose.rs  unsqueeze.rs  var_dim.rs
src/: cmp.rs  diagnostic.rs  dynamic.rs  lib.rs  num.rs
src/op/: broadcast.rs  cat.rs  cat_dyn.rs  convolution.rs  flatten.rs  gather.rs  matmul.rs  mod.rs  narrow.rs  narrow_dyn.rs  narrow_dyn_start.rs  pad.rs  permute.rs  reshape.rs  squeeze.rs  stack.rs  transmute.rs  transpose.rs  unsqueeze.rs
