[package]
name = "glowstick"
description = "Gradual typing for tensor shapes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
typosaurus = { version = "0.2.0" }

[workspace]
members = [
  "glowstick-burn",
  "glowstick-candle",
  "examples/*",
]

[workspace.package]
version = "0.2.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/nicksenger/glowstick"
categories = ["science"]
keywords = ["science", "math", "machine-learning", "metaprogramming", "types"]
rust-version = "1.85"

[workspace.dependencies]
glowstick = { path = "." }
glowstick-burn = { path = "./glowstick-burn" }
glowstick-candle = { path = "./glowstick-candle" }
thiserror = "2"

