[package]
name = "glowstick-candle"
description = "Integration of glowstick with the candle tensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
candle = { version = "0.9", package = "candle-core" }
glowstick.workspace = true
thiserror.workspace = true

