[package]
name = "whisp-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgpu"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
bincode = "=2.0.0-rc.3"
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "60158231a1d9a8a257c207d79e2d8992cd869d2a" }
byteorder = "1.5"
cfg-if = "0.1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
glowstick = { path = "../.." }
hf-hub = { version = "0.4.1", features = ["tokio"] }
npy = "0.4"
num_cpus = { version = "1.16" }
num-traits = "0.2"
serde = {version = "1.0", features = ["std", "derive"]}
strum = "0.26"
strum_macros = "0.26"
symphonia = { version = "0.5", features = ["all"] }
thiserror = "2.0"
tokenizers = {version = "0.21", default-features = false, features = [
  "onig",
  "http",
]}
tokio = { version = "1.43", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
